--- a/TestTask/appsettings.json
+++ b/TestTask/appsettings.json
@@ -8,5 +8,27 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "Logs",
+        "Args": {
+          "path": "../logs/webapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
+        }
+      }
+    ]
+  },
+    "JWT": {
+      "SecurityKey": "0E3317FB-6FCF-4336-9818-4D17190E1116",
+      "Issuer": "AntonS.WebApi",
+      "Audience": "htpps://localhost:7143/",
+      "ExpireInMinutes": 10
+    },
+    "AllowedHosts": "*"
+  }
